# projectMoment

./: .gitignore  CMakeLists.txt  README.md
include/core/: Config.h  CoreServices.h  ProjectPaths.h  VideoInfo.h
include/core/import/: VideoImportService.h
include/core/media/: AudioAnalyzer.h  AudioDeviceEnumerator.h  MetadataEmbedder.h  ThumbnailService.h  VideoExporter.h  VideoPlayer.h
include/core/recording/: NativeRecorder.h  RecordingManager.h
include/data/: VideoInfo.h
include/gui/: IconsCustom.h  Theme.h
include/gui/core/: BaseScreen.h  MainWindow.h
include/gui/screens/: MainScreen.h
include/gui/screens/editing/: EditingScreen.h  ExportWidget.h
include/gui/screens/editing/states/: ExportState.h  VideoEditState.h
include/gui/screens/main/: MainScreen.h  TopBar.h
include/gui/screens/main/states/: LoadingState.h  VideoListState.h
include/gui/screens/settings/: SettingsScreen.h
include/gui/screens/settings/states/: GeneralSettingsState.h  NativeRecordingSettingsState.h  OBSSettingsState.h  RecordingSettingsState.h
include/gui/screens/states/: EmptyFolderState.h  VideoListState.h  WelcomeState.h
include/gui/utils/: FormatUtils.h  HotkeyParser.h  ThumbnailLoader.h
include/gui/widgets/: FolderBrowser.h
src/: main.cpp
src/core/: Config.cpp  CoreServices.cpp
src/core/import/: VideoImportService.cpp
src/core/media/: AudioAnalyzer.cpp  AudioDeviceEnumerator.cpp  MetadataEmbedder.cpp  ThumbnailService.cpp  VideoExporter.cpp  VideoPlayer.cpp
src/core/recording/: NativeRecorder.cpp  RecordingManager.cpp
src/gui/core/: MainWindow.cpp
src/gui/screens/: MainScreen.cpp
src/gui/screens/editing/: EditingScreen.cpp  ExportWidget.cpp
src/gui/screens/editing/states/: ExportState.cpp  VideoEditState.cpp
src/gui/screens/main/: MainScreen.cpp  TopBar.cpp
src/gui/screens/main/states/: EmptyFolderState.cpp  LoadingState.cpp  VideoListState.cpp  WelcomeState.cpp
src/gui/screens/settings/: SettingsScreen.cpp
src/gui/screens/settings/states/: GeneralSettingsState.cpp  NativeRecordingSettingsState.cpp  OBSSettingsState.cpp  RecordingSettingsState.cpp
src/gui/screens/states/: EmptyFolderState.cpp  LoadingState.cpp  VideoListState.cpp  WelcomeState.cpp
src/gui/utils/: FormatUtils.cpp  HotkeyParser.cpp  ThumbnailLoader.cpp
src/gui/widgets/: FolderBrowser.cpp
